--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives src",
-    "start": "next start"
+    "start": "next start",
+    "db:generate": "prisma generate --schema src/database/prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "@tanstack/react-query": "^4.3.8",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -24,6 +26,7 @@
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.30.0",
+    "prisma": "^4.9.0",
     "typescript": "^4.8.3"
   }
 }
