--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "aws-sdk": "^2.1297.0",
+    "axios": "^1.2.3",
     "bson": "^4.7.2",
     "next": "^13.0.0",
     "react": "^18.2.0",
