--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-sdk": "^2.1297.0",
     "axios": "^1.2.3",
     "bson": "^4.7.2",
+    "dayjs": "^1.11.7",
     "next": "^13.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
