adjusted env variables and build script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "yarn db:generate && next build",
     "lint": "eslint --ext \".js,.ts,.tsx\" --report-unused-disable-directives src",
     "start": "next start",
     "db:generate": "prisma generate --schema src/database/prisma/schema.prisma"
